<resources>
    <string name="app_name">MyTvShows</string>
    <string name="popular">Popular</string>
    <string name="most_popular_tv_shows">Most popular tv shows</string>
    <string name="error_fetch_tv_shows">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="on_tv">On TV</string>
    <string name="stay_updated">What is on tv right now</string>
    <string name="airing_today">Airing Today</string>
    <string name="current">These are the show airing today enjoy</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="etEmail">E-mail address</string>
    <string name="etPassword">Password</string>
    <string name="log_out_button">Log out</string>
</resources>