<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"

        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"

        tools:layout_editor_absoluteX="36dp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/viewCustom"
        android:layout_below="@id/btn_login"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="Forgot Password?"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:layout_marginBottom="232dp"
        android:background="@color/colorAccent"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="-14dp" />



    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

</LinearLayout>